Assets/CSS/style.css
/* Basic Site Styling */
html, body {
    font-family: Arial, Helvetica, sans-serif;
    color: #777;

    background-image: url("../Images/gplaypattern.png");
    background-repeat: repeat;
    height: 100%;
    display: flex;
    flex-direction: column;
}

header {
    background-color: #fff;
    border-bottom: #ccc solid 2px;
    width: 100vw;
}

h1, h2, h3, h4, h5, h6 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #4aaaa5;
}
hr {
    border: #ccc solid 1px;
    margin: 1em 0;
    background-color: #ccc;
}

p, li {
    font-size: 16px;
    line-height: 2;
}

.content {
    background-color: #fff;
    margin: 5% 20% 5% 18%;
    flex: 1 0 auto;
    width: 960px;
    border: #ddd solid 1px;
    padding: 20px;
}

footer {
    background-color:#666;
    border-top: 8px solid #4aaaa5;
    flex-shrink: 0;
    font-size: 14px;
    text-align: center;
    color: #fff;
    padding: 20px;
    position: -webkit-sticky;
    position:sticky;
        bottom: 0;
}

/* Nav Bar */
.Nav {
    list-style-type: none;
    float: right;
    position: relative;
        right: 18%;
}
    li {
        display: inline-block;
        border-right: 1px solid #eee;
        padding: 10px;
        text-align: center;
    }  
    a {
        color:#777;
        margin: 4px;
        text-decoration: none;
        }
    li a:hover {
        background-color: #ccc;
        color:#fff;
    }    

/* Name Logo in Header */
.logo {
    display: inline-block;
    background-color: #4aaaa5;
    margin:0 0 0 18%;
    position: absolute;
        top: inherit;
    padding: 24px 8px;
    color:#fff;
    text-align: center;
}

/* Bio Area Pic*/
    .me {
        float: left;
        margin: 10px 17px 5px 0px;
    }

/* Contact Form Area*/
form {
    margin: 20px auto;
    width: max-content;
    font-size: 0.875;
    box-sizing: content-box;
    overflow: auto;
}
    input, textarea {
        display: block;
        width:850px;
        padding:10px;
        border: 1px solid #ddd;
        margin: 10px 0;
        font-size: 0.857em;
        font-family: inherit;
        resize: vertical;
    }

    /* Submit Button */
    button {
        background-color: #4aaaa5;
        color:#fff;
        text-align: center;
        padding:8px;
    }

    button:hover {
        background-color: #ccc;
    }

    /* Portfolio Grid */
    .gallerygrid {
        display: grid;
        gap: 10px 15px;
        grid-template-rows: repeat(3, 1fr);
        grid-template-columns: repeat(2, 1fr);
        padding: 15px;
    }
        .projects h3 {
            background-color: #4aaaa5;
            color: #fff;
            text-align: center;
            font-weight: lighter;
            width: 210px;
        }
        .projects img {
            width: 225px;
            height: 225px;
            object-fit: cover;
        }
        figure h3 {
            position: absolute;
                bottom: 10px;
            padding: 8px;
        }

